fix antal and flex wrap

--- a/src/Components/PriceDiv/PriceDiv.scss
+++ b/src/Components/PriceDiv/PriceDiv.scss
@@ -8,14 +8,14 @@
     font-size: 1.75em;
     font-family: "Caveat Brush";
     font-style: italic;
+    border-radius: 15px;
     color: rgb(0, 0, 0);
     display: none;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 0.75em;
-    background-image: url("../assets/img/paper.jpg");
-
+color: white;
 
     .price-legend {
       font-size: 1.75em;
