--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   background-image: url("../assets/img/bg.webp");
   background-size: cover;
-  gap: 1rem;
 }
